@@ -42,7 +42,7 @@ import org.json.JSONObject;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
-
+import static org.dasein.cloud.compute.VMLaunchOptions.*;
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -154,7 +154,7 @@ public class EC2Instance extends AbstractVMSupport<AWSCloud> {
             if( other == this ) {
                 return 0;
             }
-            return ( new Long(timestamp) ).compareTo(other.timestamp);
+            return ( Long.valueOf(timestamp) ).compareTo(other.timestamp);
         }
     }
 
@@ -394,20 +394,22 @@ public class EC2Instance extends AbstractVMSupport<AWSCloud> {
         return ( "https://monitoring." + ctx.getRegionId() + ".amazonaws.com" );
     }
 
+    /**
+     * Get encrypted initial Windows password. This method only definitely works with standard Amazon AMIs:
+     * http://aws.amazon.com/windows/amis/
+     * Other AMIs in the public library may have had their password changed, and it will not be retrievable on instances
+     * launched from those.
+     *
+     * @param instanceId
+     * @return
+     * @throws InternalException
+     * @throws CloudException
+     */
     @Override
     public @Nullable String getPassword(@Nonnull String instanceId) throws InternalException, CloudException {
         APITrace.begin(getProvider(), "getPassword");
         try {
-            Callable<String> callable = new GetPassCallable(
-                    instanceId,
-                    getProvider().getStandardParameters(getProvider().getContext(), EC2Method.GET_PASSWORD_DATA),
-                    getProvider(),
-                    getProvider().getEc2Url()
-            );
-            return callable.call();
-        } catch( EC2Exception e ) {
-            logger.error(e.getSummary());
-            throw new CloudException(e);
+            return new GetPassCallable(instanceId, getProvider()).call();
         } catch( CloudException ce ) {
             throw ce;
         } catch( Exception e ) {
@@ -419,22 +421,22 @@ public class EC2Instance extends AbstractVMSupport<AWSCloud> {
 
 	public static class GetPassCallable implements Callable {
         private String instanceId;
-        private Map<String, String> params;
         private AWSCloud awsProvider;
         private String ec2url;
 
-        public GetPassCallable(String iId, Map<String, String> p, AWSCloud ap, String eUrl) {
+        public GetPassCallable(String iId, AWSCloud ap) {
             instanceId = iId;
-            params = p;
             awsProvider = ap;
-            ec2url = eUrl;
         }
 
-        public String call() throws CloudException {
+        public String call() throws CloudException, InternalException {
             EC2Method method;
             NodeList blocks;
             Document doc;
-
+            if( ec2url == null ) {
+                ec2url = awsProvider.getEc2Url();
+            }
+            Map<String, String> params = awsProvider.getStandardParameters(awsProvider.getContext(), EC2Method.GET_PASSWORD_DATA);
             params.put("InstanceId", instanceId);
             try {
                 method = new EC2Method(awsProvider, ec2url, params);
@@ -529,7 +531,15 @@ public class EC2Instance extends AbstractVMSupport<AWSCloud> {
 				Node pw = blocks.item(0);
 
 				if( pw.hasChildNodes() ) {
-					return pw.getFirstChild().getNodeValue();
+					String encodedUserDataValue = pw.getFirstChild().getNodeValue();
+					if (encodedUserDataValue != null) {
+						try {
+							return new String(Base64.decodeBase64(encodedUserDataValue.getBytes("utf-8")), "utf-8");
+						} catch (UnsupportedEncodingException e) {
+							logger.error(e);
+							throw new CloudException(e);
+						}
+					}
 				}
 				return null;
 			}
@@ -1592,12 +1602,7 @@ public class EC2Instance extends AbstractVMSupport<AWSCloud> {
                 try {
                     final String sid = server.getProviderVirtualMachineId();
                     try {
-                        Callable<String> callable = new GetPassCallable(
-                                sid,
-                                getProvider().getStandardParameters(getProvider().getContext(), EC2Method.GET_PASSWORD_DATA),
-                                getProvider(),
-                                getProvider().getEc2Url()
-                        );
+                        Callable<String> callable = new GetPassCallable( sid, getProvider() );
                         String password = callable.call();
 
                         if( password == null ) {
@@ -1677,7 +1682,6 @@ public class EC2Instance extends AbstractVMSupport<AWSCloud> {
             APITrace.end();
         }
     }
-
     private void enableIpForwarding(final String instanceId) throws CloudException {
 
         Thread t = new Thread() {
